RESOLVED FIXED108510
[Chromium] Spelling should ignore whitespace
https://bugs.webkit.org/show_bug.cgi?id=108510
Summary [Chromium] Spelling should ignore whitespace
Rouslan Solomakhin
Reported 2013-01-31 12:21:26 PST
Spelling should ignore whitespace. To test manually, type 'hello, wellcome home.', select ' wellcome ', and context-click on the selection. The test succeeds when the context menu has spell check suggestions.
Attachments
Patch (3.31 KB, patch)
2013-02-01 10:10 PST, Rouslan Solomakhin
no flags
Rouslan Solomakhin
Comment 1 2013-02-01 10:10:08 PST
WebKit Review Bot
Comment 2 2013-02-01 10:56:43 PST
Comment on attachment 186070 [details] Patch Clearing flags on attachment: 186070 Committed r141608: <http://trac.webkit.org/changeset/141608>
WebKit Review Bot
Comment 3 2013-02-01 10:56:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.