Source/WebKit/chromium: [Chromium] Ignore whitespace in spellcheck https://bugs.webkit.org/show_bug.cgi?id=108510

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-02-01
Reviewed by Ryosuke Niwa.

* src/ContextMenuClientImpl.cpp:
(WebKit::selectMisspellingAsync): Ignore whitespace when selecting the misspelling.

LayoutTests: [Chromium] Expect spellcheck to ignore whitespace
https://bugs.webkit.org/show_bug.cgi?id=108510

Patch by Rouslan Solomakhin <rouslan@chromium.org> on 2013-02-01
Reviewed by Ryosuke Niwa.

* platform/chromium/TestExpectations: Expect spellcheck to ignore whitespace.

Canonical link: https://commits.webkit.org/126871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141608 268f45cc-cd09-0410-ab3c-d52691b4dbfc